@@ -1,13 +1,13 @@
 package com.worldcup.service.impl;
 
 import com.worldcup.exception.MatchNotFoundException;
+import com.worldcup.exception.TeamAlreadyPlayingException;
 import com.worldcup.model.Match;
 import com.worldcup.repository.MatchRepository;
 import com.worldcup.service.ScoreBoardService;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ScoreBoardServiceImpl implements ScoreBoardService {
     private final MatchRepository matchRepository;
@@ -18,16 +18,8 @@ public class ScoreBoardServiceImpl implements ScoreBoardService {
 
     @Override
     public void startMatch(String homeTeam, String awayTeam) {
-        boolean isTeamAlreadyPlaying = matchRepository.findAll().stream()
-                .anyMatch(match ->
-                        match.getHomeTeam().equalsIgnoreCase(homeTeam) ||
-                                match.getAwayTeam().equalsIgnoreCase(homeTeam) ||
-                                match.getHomeTeam().equalsIgnoreCase(awayTeam) ||
-                                match.getAwayTeam().equalsIgnoreCase(awayTeam)
-                );
-
-        if (isTeamAlreadyPlaying) {
-            throw new IllegalArgumentException("One or both teams are already playing");
+        if (isTeamAlreadyPlaying(homeTeam, awayTeam)) {
+            throw new TeamAlreadyPlayingException();
         }
         Match match = new Match(homeTeam, awayTeam);
         matchRepository.save(match);
@@ -36,14 +28,14 @@ public class ScoreBoardServiceImpl implements ScoreBoardService {
     @Override
     public void finishMatch(String homeTeam, String awayTeam) {
         Match match = matchRepository.findByTeams(homeTeam, awayTeam)
-                .orElseThrow(() -> new MatchNotFoundException("Match not found or already finished"));
+                .orElseThrow(MatchNotFoundException::new);
         matchRepository.delete(match);
     }
 
     @Override
     public void updateScore(String homeTeam, String awayTeam, int homeScore, int awayScore) {
         Match match = matchRepository.findByTeams(homeTeam, awayTeam)
-                .orElseThrow(() -> new MatchNotFoundException("Match not found or already finished"));
+                .orElseThrow(MatchNotFoundException::new);
         match.updateScore(homeScore, awayScore);
     }
 
@@ -53,6 +45,16 @@ public class ScoreBoardServiceImpl implements ScoreBoardService {
                 .sorted(Comparator
                         .comparing(Match::getTotalScore, Comparator.reverseOrder())
                         .thenComparing(Match::getLastUpdated, Comparator.reverseOrder()))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private boolean isTeamAlreadyPlaying(String homeTeam, String awayTeam) {
+        return matchRepository.findAll().stream()
+                .anyMatch(match ->
+                        match.getHomeTeam().equalsIgnoreCase(homeTeam) ||
+                                match.getAwayTeam().equalsIgnoreCase(homeTeam) ||
+                                match.getHomeTeam().equalsIgnoreCase(awayTeam) ||
+                                match.getAwayTeam().equalsIgnoreCase(awayTeam)
+                );
     }
 }
